Fix horizontal scrolling issue on new class table

--- a/webclient/src/light.css
+++ b/webclient/src/light.css
@@ -148,7 +148,7 @@ a {
 }
 
 .newclasstable {
-	margin: 0 -1.5rem 0 -0.5rem;
+	margin: 0 -0.5rem 0 -0.5rem;
 	display: flex;
 	flex-wrap: wrap;
 }
